# genmedia-izumi-agent

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  GEMINI_for_ADK.md  README.md  RELEASE.md  firebase.json  mediagent_config.json  pyproject.toml  walk.md
.github/workflows/: ci.yml
assets/: prompts.json
demos/backend/: README.md  agent_engine_app.py  config.py  firestore.indexes.json  gradio_app.py  main.py  pyproject.toml
demos/backend/ads_codirector/: README.md  agent.py  config.yaml
demos/backend/ads_codirector/instructions/: parameters_instruction.py  root_instruction.py  user_assets_instruction.py
demos/backend/ads_codirector/instructions/mab/: creative_director_instruction.py  mab_warm_up_instruction.py
demos/backend/ads_codirector/instructions/pre_production/: casting_instruction.py  creative_brief_instruction.py  storyboard_instruction.py  storyline_instruction.py  storyline_refinement_instruction.py  voiceover_script_instruction.py
demos/backend/ads_codirector/instructions/verifier/: keyframe_verifier.md  keyframe_verifier_instruction.py  storyboard_asset_relevance_verifier.py  storyline_verifier.md  storyline_verifier_instruction.py  video_verifier.md  video_verifier_instruction.py
demos/backend/ads_codirector/mab/: arm_definitions.py  bandit.py  report_generator.py  utils.py
demos/backend/ads_codirector/tools/: casting_tools.py  generation_tools.py  stitching_tools.py  storyboard_verifier_tools.py  user_assets_tools.py  video_verifier_tools.py
demos/backend/ads_codirector/utils/: asset_model.py  casting_model.py  common_utils.py  final_video_verifier_model.py  joint_keyframe_verifier_model.py  mab_model.py  parameters_model.py  storyboard_asset_relevance_verifier_model.py  storyboard_model.py  storyline_evaluator_model.py  storyline_model.py
demos/backend/ads_x/: README.md  agent.py
demos/backend/ads_x/instructions/: parameters_instruction.py  root_instruction.py  storyboard_instruction.py
demos/backend/ads_x/instructions/generation/: generation_instruction.py  generation_prompts.py
demos/backend/ads_x/instructions/parameters/: parameters_instruction.py
demos/backend/ads_x/instructions/strategy/: strategy_instruction.py
demos/backend/ads_x/tools/: generation_tools.py  stitching_tools.py  user_assets_tools.py
demos/backend/ads_x/tools/generation/: generation_tools.py  stitching_tools.py  summary_canvas_tool.py  voiceover_tools.py
demos/backend/ads_x/tools/parameters/: parameters_tools.py
demos/backend/ads_x/tools/storyboard/: production_tools.py  storyboard_repair_tools.py
demos/backend/ads_x/tools/user_assets/: user_assets_tools.py
demos/backend/ads_x/utils/: common_utils.py  parameters_model.py  storyboard_model.py
demos/backend/ads_x/utils/common/: common_utils.py  creative_studio_adapter.py  enrichment_utils.py  scene_generation_utils.py
demos/backend/ads_x/utils/generation/: generation_helpers.py  grouping_utils.py
demos/backend/ads_x/utils/parameters/: parameters_model.py
demos/backend/ads_x/utils/storyboard/: brief_template.py  pacing_blueprints.py  production_presets.py  storyboard_model.py  template_library.py
demos/backend/ads_x/utils/storyboard/templates/: general_purpose.py
demos/backend/ads_x_template/: README.md  agent.py
demos/backend/ads_x_template/instructions/: root_instruction.py
demos/backend/ads_x_template/instructions/generation/: generation_instruction.py  generation_prompts.py
demos/backend/ads_x_template/instructions/parameters/: parameters_instruction.py  parameters_repair_instruction.py
demos/backend/ads_x_template/instructions/storyboard/: storyboard_instruction.py
demos/backend/ads_x_template/instructions/user_assets/: user_assets_instruction.py
demos/backend/ads_x_template/tools/generation/: generation_tools.py  stitching_tools.py  summary_canvas_tool.py  voiceover_tools.py
demos/backend/ads_x_template/tools/parameters/: parameters_tools.py
demos/backend/ads_x_template/tools/storyboard/: production_tools.py  storyboard_repair_tools.py
demos/backend/ads_x_template/tools/strategy/: strategy_tools.py
demos/backend/ads_x_template/tools/user_assets/: user_assets_tools.py
demos/backend/ads_x_template/utils/common/: common_utils.py  enrichment_utils.py  scene_generation_utils.py
demos/backend/ads_x_template/utils/generation/: generation_helpers.py  grouping_utils.py
demos/backend/ads_x_template/utils/parameters/: parameters_model.py
demos/backend/ads_x_template/utils/storyboard/: pacing_blueprints.py  production_presets.py  storyboard_model.py  template_library.py  templates_model.py
demos/backend/ads_x_template/utils/storyboard/templates/: general_purpose.py  social_native.py  vertical_specific.py
demos/backend/creative_toolbox/: README.md  agent.py  agent_engine_app.py
demos/backend/creative_toolbox/instructions/: canvas_management.py  creative_writer.py  media_generation.py  root.py
demos/backend/creative_toolbox/tools/: asset_tools.py  canvas_tools.py  gemini_llm_tools.py  image_gen_tools.py  music_gen_tools.py  speech_gen_tools.py  video_gen_tools.py
demos/backend/elements_to_video/: README.md  agent.py  types.py
demos/backend/elements_to_video/instructions/: root.py  storyboard.py
demos/backend/elements_to_video/tools/: generation_tools.py  stitching_tool.py  storyboard_tool.py
demos/backend/utils/: adk.py  tracing.py  typing.py
demos/frontend/: GEMINI.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
deployment/: Dockerfile  README.md  cloudbuild.yaml
deployment/terraform/: README.md  apis.tf  artifact_registry.tf  cloud_run.tf  firestore.tf  iam.tf  iap.tf  outputs.tf  providers.tf  (+2 more)
mediagent_kit/: README.md  __init__.py  config.py  server.py
scripts/: README.md  add_licenses.py  archive-repo-as-zip.sh  deploy-to-cloud-run.sh  deploy_to_agent_engine.py  deploy_to_agent_platform.py  install_gerrit_hooks.sh  setup_gcp_project.py  start-all.sh  start-local-docker.sh  start-local-server.sh
tests/: conftest.py  dummy_creds.json
(+247 files in other folders)
